--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-pandas>=1.5.0
-numpy>=1.21.0
-plotly>=5.10.0
-dash>=2.7.0
-dash-bootstrap-components>=1.0.0
+pandas
+numpy
+plotly
+dash
+dash-bootstrap-components
