--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-pandas
-numpy
+streamlit==1.19.0
+altair==5.0.1
+pandas<2.0
+numpy<2.0
 plotly
 dash
 dash-bootstrap-components
-streamlit
-altair
-
