--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-streamlit==1.19.0
+streamlit>=1.28.0,<1.33
+pandas>=2.0.0,<2.3
+numpy>=1.24.0,<2.0
+plotly>=5.18.0,<6.0
 altair==5.0.1
-pandas<2.0
-numpy<2.0
-plotly
-dash
-dash-bootstrap-components
